Copied player embed and script from branded-player-ads to since own video is having licensing issues.

--- a/demos/developer-showcase/ics-demo/config.json
+++ b/demos/developer-showcase/ics-demo/config.json
@@ -1,7 +1,7 @@
 {
   "title": "ICS Demo",
   "description": "Create your own demo! We've provided a basic demo setup to help you get started.",
-  "license": "All",
+  "license": "Free",
   "showCode": true,
   "layout": "horizontal",
   "apiCalls": [
