--- a/demos/developer-showcase/ics-demo/config.json
+++ b/demos/developer-showcase/ics-demo/config.json
@@ -3,7 +3,7 @@
   "description": "Create your own demo! We've provided a basic demo setup to help you get started.",
   "license": "Free",
   "showCode": true,
-  "layout": "horizontal",
+  "layout": "vertical",
   "apiCalls": [
     ""
   ],
