Adding start, pause, and stop player controls and status event listeners.

--- a/demos/developer-showcase/ics-demo/config.json
+++ b/demos/developer-showcase/ics-demo/config.json
@@ -2,7 +2,7 @@
   "title": "ICS Demo",
   "description": "Create your own demo! We've provided a basic demo setup to help you get started.",
   "license": "Free",
-  "showCode": true,
+  "showCode": false,
   "layout": "vertical",
   "apiCalls": [
     ""
